--- a/source/index.html
+++ b/source/index.html
@@ -2,11 +2,118 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="page-header">
+      <nav class="main-nav page-header__nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--current">
+            <a>Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="photo.html">Фото и видео</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="form.html">Форма отзыва</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="https://htmlacademy.ru/intensive/adaptive">HTML academy</a>
+          </li>
+        </ul>
+      </nav>
+      <img class="page-header__logo" src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+      <figure class="page-header__banner page-header__banner--main">
+        <img class="page-header__slogan" src="http://via.placeholder.com/282x214" width="282" height="214" alt="Welcome to the gorgeous Sedona">
+      </figure>
+    </header>
+    <main class="page-main">
+      <h1 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <section class="advanteges">
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <b class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</b>
+        <ol class="advanteges__list">
+          <li class="advanteges__item advanteges__item--photo">
+            <h3 class="advanteges__heading">Настоящий городок</h3>
+            <p class="advanteges__text">Седона не аттракцион для туристов. Там течет своя жизнь</p>
+            <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Седона - городская жизнь">
+          </li>
+          <li class="advanteges__item advanteges__item--photo">
+            <h3 class="advanteges__heading">Там есть Мост дьявола</h3>
+            <p class="advanteges__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Мост дьявола">
+          </li>
+          <li class="advanteges__item">
+            <h3 class="advanteges__heading">Небольшая площадь</h3>
+            <p class="advanteges__text">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="advanteges__item">
+            <h3 class="advanteges__heading">Красивая дорога</h3>
+            <p class="advanteges__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advanteges__item">
+            <h3 class="advanteges__heading">Мало туристов</h3>
+            <p class="advanteges__text">Большинство едет в Гранд каньон и толпится там</p>
+          </li>
+        </ol>
+      </section>
+      <section class="recommendations">
+        <ul class="recommendations__list">
+          <li class="recommendations__item recommendations__item--booking">
+            <h3 class="recommendations__heading">Жилье</h3>
+            <p class="recommendations__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="recommendations__item recommendations__item--souvenirs">
+            <h3 class="recommendations__heading">Сувениры</h3>
+            <p class="recommendations__text">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="recommendations__item recommendations__item--food">
+            <h3 class="recommendations__heading">Еда</h3>
+            <p class="recommendations__text">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="booking">
+        <h2 class="visually-hidden">Забронировать гостиницу</h2>
+        <b class="booking__trigger">Заинтересовались?</b>
+        <p class="booking__lead">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <a class="booking__btn btn" href="#">Найти гостиницу</a>
+      </section>
+      <section class="map">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2850657d5bc4dfa61a10b1f8909a77a0be1ff4d8373ba04f4dda49abb58c46e7&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=false"></script>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="social">
+        <b class="social__tag"></b>
+        <ul class="social__list">
+          <li class="social__item">
+            <a href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="#">
+              <span class="visually-hidden">Ютьюб</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="copyright">
+        <p class="copyright__text">#visitsedona</p>
+        <a href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="copyright__logo" src="http://via.placeholder.com/27x34" alt="HTML Academy">
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
