--- a/source/index.html
+++ b/source/index.html
@@ -89,7 +89,7 @@
     </main>
     <footer class="page-footer">
       <section class="social">
-        <b class="social__tag"></b>
+        <b class="social__tag">#visitsedona</b>
         <ul class="social__list">
           <li class="social__item">
             <a href="#">
@@ -109,7 +109,7 @@
         </ul>
       </section>
       <section class="copyright">
-        <p class="copyright__text">#visitsedona</p>
+        <p class="copyright__text">Разработано</p>
         <a href="https://htmlacademy.ru/intensive/adaptive">
           <img class="copyright__logo" src="http://via.placeholder.com/27x34" alt="HTML Academy">
         </a>
