--- a/source/index.html
+++ b/source/index.html
@@ -35,47 +35,50 @@
       <h1 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
       <section class="advanteges">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <b class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</b>
-        <ol class="advanteges__list">
-          <li class="advanteges__item advanteges__item--photo">
-            <h3 class="advanteges__heading">Настоящий городок</h3>
-            <p class="advanteges__text">Седона не аттракцион для туристов. Там течет своя жизнь</p>
-            <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Седона - городская жизнь">
-          </li>
-          <li class="advanteges__item advanteges__item--photo">
-            <h3 class="advanteges__heading">Там есть Мост дьявола</h3>
-            <p class="advanteges__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-            <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Мост дьявола">
-          </li>
-          <li class="advanteges__item">
-            <h3 class="advanteges__heading">Небольшая площадь</h3>
-            <p class="advanteges__text">Все интересные места находятся очень близко</p>
-          </li>
-          <li class="advanteges__item">
-            <h3 class="advanteges__heading">Красивая дорога</h3>
-            <p class="advanteges__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advanteges__item">
-            <h3 class="advanteges__heading">Мало туристов</h3>
-            <p class="advanteges__text">Большинство едет в Гранд каньон и толпится там</p>
-          </li>
-        </ol>
-      </section>
-      <section class="recommendations">
-        <ul class="recommendations__list">
-          <li class="recommendations__item recommendations__item--booking">
-            <h3 class="recommendations__heading">Жилье</h3>
-            <p class="recommendations__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-          </li>
-          <li class="recommendations__item recommendations__item--souvenirs">
-            <h3 class="recommendations__heading">Сувениры</h3>
-            <p class="recommendations__text">Не только китайского, но и местного производства!</p>
-          </li>
-          <li class="recommendations__item recommendations__item--food">
-            <h3 class="recommendations__heading">Еда</h3>
-            <p class="recommendations__text">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
-          </li>
-        </ul>
+        <p class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <div class="advanteges__item advanteges__item--photo">
+          <h3 class="advanteges__heading">Настоящий городок</h3>
+          <span>№ 1</span>
+          <p class="advanteges__text">Седона не аттракцион для туристов. Там течет своя жизнь</p>
+          <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Седона - городская жизнь">
+        </div>
+        <div class="advanteges__item advanteges__item--photo">
+          <h3 class="advanteges__heading">Там есть Мост дьявола</h3>
+          <span>№ 2</span>
+          <p class="advanteges__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Мост дьявола">
+        </div>
+        <div class="advanteges__item">
+          <h3 class="advanteges__heading">Небольшая площадь</h3>
+          <span>№ 3</span>
+          <p class="advanteges__text">Все интересные места находятся очень близко</p>
+        </div>
+        <div class="advanteges__item">
+          <h3 class="advanteges__heading">Красивая дорога</h3>
+          <span>№ 4</span>
+          <p class="advanteges__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="advanteges__item">
+          <h3 class="advanteges__heading">Мало туристов</h3>
+          <span>№ 5</span>
+          <p class="advanteges__text">Большинство едет в Гранд каньон и толпится там</p>
+        </div>
+        <div class="recommendations">
+          <ul class="recommendations__list">
+            <li class="recommendations__item recommendations__item--booking">
+              <h3 class="recommendations__heading">Жилье</h3>
+              <p class="recommendations__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="recommendations__item recommendations__item--souvenirs">
+              <h3 class="recommendations__heading">Сувениры</h3>
+              <p class="recommendations__text">Не только китайского, но и местного производства!</p>
+            </li>
+            <li class="recommendations__item recommendations__item--food">
+              <h3 class="recommendations__heading">Еда</h3>
+              <p class="recommendations__text">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="booking">
         <h2 class="visually-hidden">Забронировать гостиницу</h2>
