--- a/source/form.html
+++ b/source/form.html
@@ -12,21 +12,23 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current">
-            <a href="index.html">Главная</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a href="photo.html">Фото и видео</a>
+            <a class="main-nav__link" href="photo.html">Фото и видео</a>
           </li>
           <li class="main-nav__item main-nav__item--current">
-            <a>Форма отзыва</a>
+            <a class="main-nav__link">Форма отзыва</a>
           </li>
           <li class="main-nav__item">
-            <a href="https://htmlacademy.ru/intensive/adaptive">HTML academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML academy</a>
           </li>
         </ul>
       </nav>
-      <img class="page-header__logo" src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+      <a class="page-header__logo" href="index.html">
+        <img src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+      </a>
       <figure class="page-header__banner page-header__banner--page">
         <img class="page-header__slogan" src="http://via.placeholder.com/229x39" width="229" height="39" alt="Sedona">
       </figure>
@@ -37,90 +39,64 @@
         <p class="lead__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
       <form class="testimonial-form" method="post" action="https://echo.htmlacademy.ru">
-        <fealdset class="testimonial-form__group">
+        <fieldset class="testimonial-form__group">
           <legend class="testimonial-form__legend">Представьтесь:</legend>
-          <label class="testimonial-form__label testimonial-form__label--name">
-            <span>Имя<sup>*</sup>:</span>
-            <input type="text" name="first-name" placeholder="Петр" required>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--name">
-            <span>Фамилия<sup>*</sup>:</span>
-            <input type="text" name="surname" placeholder="Иванов" required>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--name">
-            <span>Отчество:</span>
-            <input type="text" name="patronymic" placeholder="Александрович">
-          </label>
-        </fealdset>
-        <fealdset class="testimonial-form__group">
+          <label class="testimonial-form__label testimonial-form__label--name" for="first-name">Имя<sup>*</sup>:</label>
+          <input type="text" name="first-name" placeholder="Петр" id="first-name" required>
+          <label class="testimonial-form__label testimonial-form__label--name" for="surname">Фамилия<sup>*</sup>:</label>
+          <input type="text" name="surname" placeholder="Иванов" id="surname" required>
+          <label class="testimonial-form__label testimonial-form__label--name" for="patronymic">Отчество:</label>
+          <input type="text" name="patronymic" placeholder="Александрович" id="patronymic">
+        </fieldset>
+        <fieldset class="testimonial-form__group">
           <legend class="testimonial-form__legend">Контактная информация:</legend>
-          <label class="testimonial-form__label testimonial-form__label--contacts">
-            <span>Контактный телефон<sup>*</sup>:</span>
-            <input type="tel" name="user-phone" placeholder="Введите телефон" required>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--contacts">
-            <span>Электронная почта<sup>*</sup>:</span>
-            <input type="email" name="user-email" placeholder="Введите e-mail" required>
-          </label>
-        </fealdset>
-        <fealdset class="testimonial-form__group">
+          <label class="testimonial-form__label testimonial-form__label--contacts" for="user-phone">Контактный телефон<sup>*</sup>:</label>
+          <input type="tel" name="user-phone" placeholder="Введите телефон" id="user-phone" required>
+          <label class="testimonial-form__label testimonial-form__label--contacts" for="user-email">Электронная почта<sup>*</sup>:</label>
+          <input type="email" name="user-email" placeholder="Введите e-mail" id="user-email" required>
+        </fieldset>
+        <fieldset class="testimonial-form__group">
           <legend class="testimonial-form__legend">Ваше общее впечатление:</legend>
-          <label class="testimonial-form__label testimonial-form__label--radio">
-            <input type="radio" name="filling" value="positive" checked>
-            <span>Скорее положительное</span>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--radio">
-            <input type="radio" name="filling" value="negative">
-            <span>Скорее отрицательное</span>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--radio">
-            <input type="radio" name="filling" value="no-answer">
-            <span>Затрудняюсь ответить</span>
-          </label>
-        </fealdset>
-        <fealdset class="testimonial-form__group">
+          <input type="radio" name="filling" value="positive" id="radio-positive" checked>
+          <label class="testimonial-form__label testimonial-form__label--radio" for="radio-positive">Скорее положительное</label>
+          <input type="radio" name="filling" value="negative" id="radio-negative">
+          <label class="testimonial-form__label testimonial-form__label--radio" for="radio-negative">Скорее отрицательное</label>
+          <input type="radio" name="filling" value="no-answer" id="radio-no-answer">
+          <label class="testimonial-form__label testimonial-form__label--radio" for="no-answer">Затрудняюсь ответить</label>
+        </fieldset>
+        <fieldset class="testimonial-form__group">
           <legend class="testimonial-form__legend">Посещенные достопримечательности:</legend>
-          <label class="testimonial-form__label testimonial-form__label--checkbox">
-            <input type="checkbox" name="attractions" value="bridge" checked>
-            <span>Мост Дьявола</span>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--checkbox">
-            <input type="checkbox" name="attractions" value="park" checked>
-            <span>Слайд-парк</span>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--checkbox">
-            <input type="checkbox" name="attractions" value="mountain">
-            <span>Гора-Колокол</span>
-          </label>
-          <label class="testimonial-form__label testimonial-form__label--checkbox">
-            <input type="checkbox" name="attractions" value="red-rocks" checked>
-            <span>Красные скалы</span>
-          </label>
-        </fealdset>
-        <fealdset class="testimonial-form__group">
-          <label class="testimonial-form__label testimonial-form__label--textarea">
-            <span>Опишите свои эмоции:</span>
-            <textarea name="message" rows="5" placeholder="Опишите подробно все свои восторги"></textarea>
-          </label>
-        </fealdset>
-        <button class="testimonial-form__button btn">Отправить отзыв</button>
+          <input type="checkbox" name="attractions" value="bridge" id="checkbox-bridge" checked>
+          <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-bridge">Мост Дьявола</label>
+          <input type="checkbox" name="attractions" value="park" id="checkbox-park" checked>
+          <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-park">Слайд-парк</label>
+          <input type="checkbox" name="attractions" value="mountain" id="checkbox-mountain">
+          <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-mountain">Гора-Колокол</label>
+          <input type="checkbox" name="attractions" value="red-rocks" id="checkbox-red-rocks" checked>
+          <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-red-rocks">Красные скалы</label>
+        </fieldset>
+        <fieldset class="testimonial-form__group">
+          <label class="testimonial-form__label testimonial-form__label--textarea" for="message-area">Опишите свои эмоции:</label>
+          <textarea name="message" rows="5" placeholder="Опишите подробно все свои восторги" id="message-area"></textarea>
+        </fieldset>
+        <button class="testimonial-form__button btn" type="submit">Отправить отзыв</button>
       </form>
     </main>
     <footer class="page-footer">
       <section class="social">
         <b class="social__tag">#visitsedona</b>
         <ul class="social__list">
-          <li class="social__item">
+          <li class="social__item social__item--tw">
             <a href="#">
               <span class="visually-hidden">Твиттер</span>
             </a>
           </li>
-          <li class="social__item">
+          <li class="social__item social__item--fb">
             <a href="#">
               <span class="visually-hidden">Фейсбук</span>
             </a>
           </li>
-          <li class="social__item">
+          <li class="social__item social__item--youtube">
             <a href="#">
               <span class="visually-hidden">Ютьюб</span>
             </a>
@@ -134,14 +110,14 @@
         </a>
       </section>
     </footer>
-    <section class="modal modal-fail">
+    <section class="modal modal--fail">
       <div class="modal__lead lead">
         <b class="lead__caption">Что-то пошло не так!</b>
         <p class="lead__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       </div>
       <button class="modal__btn modal__btn--fail btn" type="button">OK</button>
     </section>
-    <section class="modal modal-ok">
+    <section class="modal modal--ok">
       <div class="modal__lead lead">
         <b class="lead__caption">Ваш отзыв отправлен!</b>
         <p class="lead__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
