--- a/source/index.html
+++ b/source/index.html
@@ -13,20 +13,22 @@
         </button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current">
-            <a>Главная</a>
+            <a class="main-nav__link">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a href="photo.html">Фото и видео</a>
+            <a class="main-nav__link" href="photo.html">Фото и видео</a>
           </li>
           <li class="main-nav__item">
-            <a href="form.html">Форма отзыва</a>
+            <a class="main-nav__link" href="form.html">Форма отзыва</a>
           </li>
           <li class="main-nav__item">
-            <a href="https://htmlacademy.ru/intensive/adaptive">HTML academy</a>
+            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML academy</a>
           </li>
         </ul>
       </nav>
-      <img class="page-header__logo" src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+      <a class="page-header__logo" href="index.html">
+        <img src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+      </a>
       <figure class="page-header__banner page-header__banner--main">
         <img class="page-header__slogan" src="http://via.placeholder.com/282x214" width="282" height="214" alt="Welcome to the gorgeous Sedona">
       </figure>
@@ -38,29 +40,29 @@
         <p class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <div class="advanteges__item advanteges__item--photo">
           <h3 class="advanteges__heading">Настоящий городок</h3>
-          <span>№ 1</span>
+          <span class="advanteges__number">№ 1</span>
           <p class="advanteges__text">Седона не аттракцион для туристов. Там течет своя жизнь</p>
           <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Седона - городская жизнь">
         </div>
         <div class="advanteges__item advanteges__item--photo">
           <h3 class="advanteges__heading">Там есть Мост дьявола</h3>
-          <span>№ 2</span>
+          <span class="advanteges__number">№ 2</span>
           <p class="advanteges__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Мост дьявола">
         </div>
         <div class="advanteges__item">
           <h3 class="advanteges__heading">Небольшая площадь</h3>
-          <span>№ 3</span>
+          <span class="advanteges__number">№ 3</span>
           <p class="advanteges__text">Все интересные места находятся очень близко</p>
         </div>
         <div class="advanteges__item">
           <h3 class="advanteges__heading">Красивая дорога</h3>
-          <span>№ 4</span>
+          <span class="advanteges__number">№ 4</span>
           <p class="advanteges__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="advanteges__item">
           <h3 class="advanteges__heading">Мало туристов</h3>
-          <span>№ 5</span>
+          <span class="advanteges__number">№ 5</span>
           <p class="advanteges__text">Большинство едет в Гранд каньон и толпится там</p>
         </div>
         <div class="recommendations">
@@ -94,17 +96,17 @@
       <section class="social">
         <b class="social__tag">#visitsedona</b>
         <ul class="social__list">
-          <li class="social__item">
+          <li class="social__item social__item--tw">
             <a href="#">
               <span class="visually-hidden">Твиттер</span>
             </a>
           </li>
-          <li class="social__item">
+          <li class="social__item social__item--fb">
             <a href="#">
               <span class="visually-hidden">Фейсбук</span>
             </a>
           </li>
-          <li class="social__item">
+          <li class="social__item social__item--youtube">
             <a href="#">
               <span class="visually-hidden">Ютьюб</span>
             </a>
