--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
           </li>
         </ul>
       </nav>
-      <a class="page-header__logo" href="index.html">
+      <a class="page-header__logo">
         <img src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
       </a>
       <figure class="page-header__banner page-header__banner--main">
