Сделала первичную стилизацию

--- a/source/photo.html
+++ b/source/photo.html
@@ -28,10 +28,10 @@
         </ul>
       </nav>
       <a class="page-header__logo" href="index.html">
-        <img src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+        <img src="img/logo-sedona-mobile.svg" width="110" height="83" alt="Логотип Седона">
       </a>
       <figure class="page-header__banner page-header__banner--page">
-        <img class="page-header__slogan" src="http://via.placeholder.com/229x39" width="229" height="39" alt="Sedona">
+        <img class="page-header__slogan" src="img/text-sedona.svg" width="229" height="39" alt="Sedona">
       </figure>
     </header>
     <main class="page-main">
@@ -43,18 +43,20 @@
         <ul class="gallery__list">
           <li class="gallery__item photo-card">
             <a class="photo-card__img" href="#">
-              <img src="http://via.placeholder.com/280x280" width="280" height="280" alt="Неродные просторы">
+              <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
             </a>
-            <b class="photo-card__caption">Неродные просторы</b>
-            <p class="photo-card__autor">Автор фото: Борис</p>
-            <a class="photo-card__btn like-btn" href="#">
-              <span class="like-btn__icon"></span>
-              <span class="like-btn__counter">1350</span>
-            </a>
+            <div class="photo-card__wrap">
+              <b class="photo-card__caption">Неродные просторы</b>
+              <p class="photo-card__autor">Автор фото: Борис</p>
+              <a class="photo-card__btn like-btn" href="#">
+                <span class="like-btn__icon"></span>
+                <span class="like-btn__counter">1350</span>
+              </a>
+            </div>
           </li>
           <li class="gallery__item photo-card">
             <a class="photo-card__img" href="#">
-              <img src="http://via.placeholder.com/280x280" width="280" height="280" alt="Местная растительность">
+              <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
             </a>
             <b class="photo-card__caption">Местная растительность</b>
             <p class="photo-card__autor">Автор фото: Сергей</p>
@@ -65,7 +67,7 @@
           </li>
           <li class="gallery__item photo-card">
             <a class="photo-card__img" href="#">
-              <img src="http://via.placeholder.com/280x280" width="280" height="280" alt="Дорога на север">
+              <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
             </a>
             <b class="photo-card__caption">Дорога на север</b>
             <p class="photo-card__autor">Автор фото: Пётр</p>
@@ -76,7 +78,7 @@
           </li>
           <li class="gallery__item photo-card">
             <a class="photo-card__img" href="#">
-              <img src="http://via.placeholder.com/280x280" width="280" height="280" alt="Мост дьявола">
+              <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост дьявола">
             </a>
             <b class="photo-card__caption">Мост дьявола</b>
             <p class="photo-card__autor">Автор фото: Антон</p>
@@ -92,7 +94,7 @@
           <b class="lead__caption">Все еще сомневаетесь?</b>
           <p class="lead__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
-        <div class="video__item">
+        <div class="video__item player">
           <div class="player__screen"></div>
           <div class="player__controls">
             <div class="player__progress-bar">
