--- a/source/form.html
+++ b/source/form.html
@@ -28,10 +28,12 @@
         </ul>
       </nav>
       <a class="page-header__logo" href="index.html">
-        <img src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+        <img src="img/logo-sedona-mobile.svg" width="110" height="83" alt="Логотип Седона">
       </a>
-      <figure class="page-header__banner page-header__banner--page">
-        <img class="page-header__slogan" src="http://via.placeholder.com/229x39" width="229" height="39" alt="Sedona">
+      <div class="page-header__wrap">
+        <figure class="page-header__banner page-header__banner--page">
+          <img class="page-header__slogan" src="img/text-sedona.svg" width="229" height="39" alt="Sedona">
+      </div>
       </figure>
     </header>
     <main class="page-main">
@@ -123,7 +125,9 @@
         <b class="lead__caption">Ваш отзыв отправлен!</b>
         <p class="lead__text">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
       </div>
-      <button class="modal__btn modal__btn--ok btn" type="button">Закрыть окно</button>
+      <div class="modal__btn-wrap">
+        <button class="modal__btn modal__btn--ok btn" type="button">Закрыть окно</button>
+      </div>
     </section>
   </body>
 </html>
