--- a/source/index.html
+++ b/source/index.html
@@ -28,43 +28,55 @@
         </ul>
       </nav>
       <a class="page-header__logo">
-        <img src="http://via.placeholder.com/110x83" width="110" height="83" alt="Логотип Седона">
+        <img src="img/logo-sedona-mobile.svg" width="110" height="83" alt="Логотип Седона">
       </a>
-      <figure class="page-header__banner page-header__banner--main">
-        <img class="page-header__slogan" src="http://via.placeholder.com/282x214" width="282" height="214" alt="Welcome to the gorgeous Sedona">
-      </figure>
+      <div class="page-header__wrap">
+        <figure class="page-header__banner page-header__banner--main">
+          <img class="page-header__slogan" src="img/text-sedona-index.svg" width="282" height="214" alt="Welcome to the gorgeous Sedona">
+        </figure>
+      </div>
     </header>
     <main class="page-main">
-      <h1 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <h1 class="section-title">Седона — небольшой <br>городок в Аризоне, заслуживающий большего!</h1>
       <section class="advanteges">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
         <p class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <div class="advanteges__item advanteges__item--photo">
-          <h3 class="advanteges__heading">Настоящий городок</h3>
-          <span class="advanteges__number">№ 1</span>
-          <p class="advanteges__text">Седона не аттракцион для туристов. Там течет своя жизнь</p>
-          <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Седона - городская жизнь">
+          <div class="advanteges__wrap">
+            <h3 class="advanteges__heading">Настоящий городок</h3>
+            <span class="advanteges__number">№ 1</span>
+            <p class="advanteges__text">Седона не аттракцион для туристов. Там течет своя жизнь</p>
+          </div>
+          <img class="advanteges__photo" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Седона - городская жизнь">
         </div>
         <div class="advanteges__item advanteges__item--photo">
-          <h3 class="advanteges__heading">Там есть Мост дьявола</h3>
-          <span class="advanteges__number">№ 2</span>
-          <p class="advanteges__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img class="advanteges__photo" src="http://via.placeholder.com/320x260" width="100%" height="260" alt="Мост дьявола">
+          <div class="advanteges__wrap">
+            <h3 class="advanteges__heading">Там есть Мост дьявола</h3>
+            <span class="advanteges__number">№ 2</span>
+            <p class="advanteges__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </div>
+          <img class="advanteges__photo" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Мост дьявола">
         </div>
         <div class="advanteges__item">
-          <h3 class="advanteges__heading">Небольшая площадь</h3>
-          <span class="advanteges__number">№ 3</span>
-          <p class="advanteges__text">Все интересные места находятся очень близко</p>
+          <div class="advanteges__wrap">
+            <h3 class="advanteges__heading">Небольшая площадь</h3>
+            <span class="advanteges__number">№ 3</span>
+            <p class="advanteges__text">Все интересные места находятся очень близко</p>
+          </div>
         </div>
         <div class="advanteges__item">
-          <h3 class="advanteges__heading">Красивая дорога</h3>
-          <span class="advanteges__number">№ 4</span>
-          <p class="advanteges__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          <div class="advanteges__wrap">
+            <h3 class="advanteges__heading">Красивая дорога</h3>
+            <span class="advanteges__number">№ 4</span>
+            <p class="advanteges__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
         </div>
         <div class="advanteges__item">
-          <h3 class="advanteges__heading">Мало туристов</h3>
-          <span class="advanteges__number">№ 5</span>
-          <p class="advanteges__text">Большинство едет в Гранд каньон и толпится там</p>
+          <div class="advanteges__wrap">
+            <h3 class="advanteges__heading">Мало туристов</h3>
+            <span class="advanteges__number">№ 5</span>
+            <p class="advanteges__text">Большинство едет в Гранд каньон и толпится там</p>
+          </div>
         </div>
         <div class="recommendations">
           <ul class="recommendations__list">
@@ -117,7 +129,7 @@
       <section class="copyright">
         <p class="copyright__text">Разработано</p>
         <a href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="copyright__logo" src="http://via.placeholder.com/27x34" alt="HTML Academy">
+          <img class="copyright__logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
         </a>
       </section>
     </footer>
