Избавилась от горизонтального скролла и зафиксировала ширину контента для мобильных

--- a/source/index.html
+++ b/source/index.html
@@ -37,10 +37,14 @@
       </div>
     </header>
     <main class="page-main">
-      <h1 class="section-title">Седона — небольшой <br>городок в Аризоне, заслуживающий большего!</h1>
+      <div class="center-wrap">
+        <h1 class="section-title">Седона — небольшой <br>городок в Аризоне, заслуживающий большего!</h1>
+      </div>
       <section class="advanteges">
-        <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <div class="center-wrap">
+          <h2 class="visually-hidden">Преимущества Седоны</h2>
+          <p class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        </div>
         <div class="advanteges__item advanteges__item--photo">
           <div class="advanteges__wrap">
             <h3 class="advanteges__heading">Настоящий городок</h3>
