--- a/source/photo.html
+++ b/source/photo.html
@@ -35,7 +35,7 @@
       </figure>
     </header>
     <main class="page-main">
-      <div class="lead">
+      <div class="lead center-wrap">
         <h1 class="lead__caption">Фото и видео</h1>
         <p class="lead__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
@@ -90,7 +90,7 @@
         </ul>
       </section>
       <section class="video">
-        <div class="video__lead lead">
+        <div class="video__lead lead center-wrap">
           <b class="lead__caption">Все еще сомневаетесь?</b>
           <p class="lead__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
