Добавила центровщики к формам

--- a/source/form.html
+++ b/source/form.html
@@ -37,11 +37,11 @@
       </figure>
     </header>
     <main class="page-main">
-      <div class="lead">
+      <div class="lead center-wrap">
         <h1 class="lead__caption">Оставьте свой отзыв</h1>
         <p class="lead__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
-      <form class="testimonial-form" method="post" action="https://echo.htmlacademy.ru">
+      <form class="testimonial-form center-wrap" method="post" action="https://echo.htmlacademy.ru">
         <fieldset class="testimonial-form__group">
           <legend class="testimonial-form__legend">Представьтесь:</legend>
           <label class="testimonial-form__label testimonial-form__label--name" for="first-name">Имя<sup>*</sup>:</label>
