--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,8 @@
           <span class="visually-hidden">Открыть меню</span>
         </button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--current">
-            <a class="main-nav__link">Главная</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--current">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="photo.html">Фото и видео</a>
@@ -26,25 +26,19 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML academy</a>
           </li>
         </ul>
+        <a class="main-nav__logo">
+          <img src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+        </a>
       </nav>
-      <a class="page-header__logo">
-        <img src="img/logo-sedona-mobile.svg" width="110" height="83" alt="Логотип Седона">
-      </a>
-      <div class="page-header__wrap">
-        <figure class="page-header__banner page-header__banner--main">
-          <img class="page-header__slogan" src="img/text-sedona-index.svg" width="282" height="214" alt="Welcome to the gorgeous Sedona">
-        </figure>
-      </div>
+      <figure class="page-header__banner page-header__banner--main">
+        <img class="page-header__slogan" src="img/text-sedona-index.svg" width="282" height="214" alt="Welcome to the gorgeous Sedona">
+      </figure>
     </header>
     <main class="page-main">
-      <div class="center-wrap">
-        <h1 class="section-title">Седона — небольшой <br>городок в Аризоне, заслуживающий большего!</h1>
-      </div>
+      <h1 class="section-title">Седона — небольшой <br>городок в Аризоне, заслуживающий большего!</h1>
       <section class="advanteges">
-        <div class="center-wrap">
-          <h2 class="visually-hidden">Преимущества Седоны</h2>
-          <p class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-        </div>
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <p class="advanteges__lead">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
         <div class="advanteges__item advanteges__item--photo">
           <div class="advanteges__wrap">
             <h3 class="advanteges__heading">Настоящий городок</h3>
