--- a/source/photo.html
+++ b/source/photo.html
@@ -16,8 +16,8 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
-          <li class="main-nav__item main-nav__item--current">
-            <a class="main-nav__link">Фото и видео</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--current">Фото и видео</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Форма отзыва</a>
@@ -26,16 +26,16 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML academy</a>
           </li>
         </ul>
+        <a class="main-nav__logo" href="index.html">
+          <img src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+        </a>
       </nav>
-      <a class="page-header__logo" href="index.html">
-        <img src="img/logo-sedona-mobile.svg" width="110" height="83" alt="Логотип Седона">
-      </a>
       <figure class="page-header__banner page-header__banner--page">
         <img class="page-header__slogan" src="img/text-sedona.svg" width="229" height="39" alt="Sedona">
       </figure>
     </header>
     <main class="page-main">
-      <div class="lead center-wrap">
+      <div class="lead">
         <h1 class="lead__caption">Фото и видео</h1>
         <p class="lead__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
@@ -46,8 +46,10 @@
               <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Неродные просторы">
             </a>
             <div class="photo-card__wrap">
-              <b class="photo-card__caption">Неродные просторы</b>
-              <p class="photo-card__autor">Автор фото: Борис</p>
+              <div class="photo-card__caption-wrap">
+                <b class="photo-card__caption">Неродные просторы</b>
+                <p class="photo-card__autor">Автор фото: Борис</p>
+              </div>
               <a class="photo-card__btn like-btn" href="#">
                 <span class="like-btn__icon"></span>
                 <span class="like-btn__counter">1350</span>
@@ -58,39 +60,51 @@
             <a class="photo-card__img" href="#">
               <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Местная растительность">
             </a>
-            <b class="photo-card__caption">Местная растительность</b>
-            <p class="photo-card__autor">Автор фото: Сергей</p>
-            <a class="photo-card__btn like-btn" href="#">
-              <span class="like-btn__icon"></span>
-              <span class="like-btn__counter">143</span>
-            </a>
+            <div class="photo-card__wrap">
+              <div class="photo-card__caption-wrap">
+                <b class="photo-card__caption">Местная растительность</b>
+                <p class="photo-card__autor">Автор фото: Сергей</p>
+              </div>
+              <a class="photo-card__btn like-btn" href="#">
+                <span class="like-btn__icon"></span>
+                <span class="like-btn__counter">143</span>
+              </a>
+            </div>
           </li>
           <li class="gallery__item photo-card">
             <a class="photo-card__img" href="#">
               <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога на север">
             </a>
-            <b class="photo-card__caption">Дорога на север</b>
-            <p class="photo-card__autor">Автор фото: Пётр</p>
-            <a class="photo-card__btn like-btn" href="#">
-              <span class="like-btn__icon"></span>
-              <span class="like-btn__counter">96</span>
-            </a>
+            <div class="photo-card__wrap">
+              <div class="photo-card__caption-wrap">
+                <b class="photo-card__caption">Дорога на север</b>
+                <p class="photo-card__autor">Автор фото: Пётр</p>
+              </div>
+              <a class="photo-card__btn like-btn" href="#">
+                <span class="like-btn__icon"></span>
+                <span class="like-btn__counter">96</span>
+              </a>
+            </div>
           </li>
           <li class="gallery__item photo-card">
             <a class="photo-card__img" href="#">
               <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост дьявола">
             </a>
-            <b class="photo-card__caption">Мост дьявола</b>
-            <p class="photo-card__autor">Автор фото: Антон</p>
-            <a class="photo-card__btn like-btn" href="#">
-              <span class="like-btn__icon"></span>
-              <span class="like-btn__counter">254</span>
-            </a>
+            <div class="photo-card__wrap">
+              <div class="photo-card__caption-wrap">
+                <b class="photo-card__caption">Мост дьявола</b>
+                <p class="photo-card__autor">Автор фото: Антон</p>
+              </div>
+              <a class="photo-card__btn like-btn" href="#">
+                <span class="like-btn__icon"></span>
+                <span class="like-btn__counter">254</span>
+              </a>
+            </div>
           </li>
         </ul>
       </section>
       <section class="video">
-        <div class="video__lead lead center-wrap">
+        <div class="video__lead lead">
           <b class="lead__caption">Все еще сомневаетесь?</b>
           <p class="lead__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
