Вопрос по стилизации форм

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
         <p class="lead__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
       <form class="testimonial-form" method="post" action="https://echo.htmlacademy.ru">
-        <fieldset class="testimonial-form__group">
+        <fieldset class="testimonial-form__group testimonial-form__group--name">
           <legend class="testimonial-form__legend">Представьтесь:</legend>
           <label class="testimonial-form__label testimonial-form__label--name" for="first-name">Имя<sup>*</sup>:</label>
           <input type="text" name="first-name" placeholder="Петр" id="first-name" required>
