Готова Главная мобильная версия

--- a/source/photo.html
+++ b/source/photo.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="page-header">
-      <nav class="main-nav page-header__nav">
+      <nav class="main-nav main-nav--closed main-nav--nojs page-header__nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -152,5 +152,6 @@
         </a>
       </section>
     </footer>
+    <script src="js/main-nav--mobile.js"></script>
   </body>
 </html>
