Сделала Главную и Фото

--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="advanteges__item advanteges__item--last">
           <div class="advanteges__wrap">
-            <h3 class="advanteges__heading">Мало туристов</h3>
+            <h3 class="advanteges__heading">Мало <br>туристов</h3>
             <span class="advanteges__number">№ 5</span>
             <p class="advanteges__text">Большинство едет в Гранд каньон и толпится там</p>
           </div>
@@ -96,7 +96,7 @@
       <section class="booking">
         <h2 class="visually-hidden">Забронировать гостиницу</h2>
         <b class="booking__trigger">Заинтересовались?</b>
-        <p class="booking__lead">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <p class="booking__lead">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <a class="booking__btn btn" href="#">Найти гостиницу</a>
       </section>
       <section class="map">
