Вопрос по legend и focus

--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
       </figure>
     </header>
     <main class="page-main page-main--inner">
-      <div class="lead">
+      <div class="lead page-main__lead page-main__lead--testimonial">
         <h1 class="lead__caption">Оставьте свой отзыв</h1>
         <p class="lead__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
@@ -61,24 +61,24 @@
         <fieldset class="testimonial-form__group testimonial-form__group--radio">
           <legend class="testimonial-form__legend">Ваше общее впечатление:</legend>
           <div class="testimonial-form__flex-wrap">
-            <input class="visually-hidden" type="radio" name="filling" value="positive" id="radio-positive" checked>
+            <input class="visually-hidden testimonial-form__input--radio" type="radio" name="filling" value="positive" id="radio-positive" checked>
             <label class="testimonial-form__label testimonial-form__label--radio" for="radio-positive">Скорее положительное</label>
-            <input class="visually-hidden" type="radio" name="filling" value="negative" id="radio-negative">
+            <input class="visually-hidden testimonial-form__input--radio" type="radio" name="filling" value="negative" id="radio-negative">
             <label class="testimonial-form__label testimonial-form__label--radio" for="radio-negative">Скорее отрицательное</label>
-            <input class="visually-hidden" type="radio" name="filling" value="no-answer" id="radio-no-answer">
+            <input class="visually-hidden testimonial-form__input--radio" type="radio" name="filling" value="no-answer" id="radio-no-answer">
             <label class="testimonial-form__label testimonial-form__label--radio" for="radio-no-answer">Затрудняюсь ответить</label>
           </div>
         </fieldset>
         <fieldset class="testimonial-form__group testimonial-form__group--checkbox">
           <legend class="testimonial-form__legend">Посещенные достопримечательности:</legend>
           <div class="testimonial-form__flex-wrap testimonial-form__flex-wrap--row">
-            <input class="visually-hidden" type="checkbox" name="attractions" value="bridge" id="checkbox-bridge" checked>
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="bridge" id="checkbox-bridge" checked>
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-bridge">Мост Дьявола</label>
-            <input class="visually-hidden" type="checkbox" name="attractions" value="park" id="checkbox-park" checked>
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="park" id="checkbox-park" checked>
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-park">Слайд-парк</label>
-            <input class="visually-hidden" type="checkbox" name="attractions" value="mountain" id="checkbox-mountain">
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="mountain" id="checkbox-mountain">
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-mountain">Гора-Колокол</label>
-            <input class="visually-hidden" type="checkbox" name="attractions" value="red-rocks" id="checkbox-red-rocks" checked>
+            <input class="visually-hidden testimonial-form__input--checkbox" type="checkbox" name="attractions" value="red-rocks" id="checkbox-red-rocks" checked>
             <label class="testimonial-form__label testimonial-form__label--checkbox" for="checkbox-red-rocks">Красные скалы</label>
           </div>
         </fieldset>
