--- a/source/photo.html
+++ b/source/photo.html
@@ -50,9 +50,9 @@
       </figure>
     </header>
     <main class="page-main">
-      <div class="lead page-main__lead">
+      <div class="lead page-main__lead page-main__lead--photo">
         <h1 class="lead__caption">Фото и видео</h1>
-        <p class="lead__text--transform-tab">Не можете решиться на путешествие из-за курса? <br>Фотографии помогут вам забыть о политике и экономике.</p>
+        <p class="lead__text lead__text--transform-tab">Не можете решиться на путешествие из-за курса? <br>Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
       <section class="gallery">
         <ul class="gallery__list">
